--- a/Typora/base.user.css
+++ b/Typora/base.user.css
@@ -1,5 +1,19 @@
 @charset "UTF-8";
 
+@media screen {
+h1 {
+  font-size: 1.2rem;
+}
+
+h2 {
+  font-size: 1.1rem;
+}
+
+h3, h4, h5, h6 {
+  font-size: 1rem;
+}
+}
+
 @media print {
 @page {
   margin: 5mm;
@@ -31,7 +45,7 @@
   }
   /* 字体 */
   html {
-    font-size: 10px;
+    font-size: 10px !important;
   }
   
   body {
