--- a/Typora/eric.css
+++ b/Typora/eric.css
@@ -1,5 +1,3 @@
-/* 基于主题 vue 修改 */
-
 :root {
     --side-bar-bg-color: #fff;
     --control-text-color: #777;
@@ -724,4 +722,10 @@ footer {
 
 .html-for-mac .context-menu {
     --item-hover-bg-color: #E6F0FE;
+}
+
+/* search panel */
+div#md-searchpanel svg {
+	width: 1rem;
+	height: 1rem;
 }
