fix table insert dialog

--- a/Typora/eric-dark.css
+++ b/Typora/eric-dark.css
@@ -1038,3 +1038,8 @@ div#md-searchpanel svg {
 #table-insert-col, #table-insert-row {
 	color: #fff;
 }
+
+/* title bar */
+#top-titlebar {
+	--text-color: white;
+}
